# Knee-injury-scanner

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  calculate_explanation_statistics_segformer.py  docker-compose.yml  explain_transformer_output.py  main.py  pyproject.toml  train_transformer.py
.github/workflows/: linters.yml  pull-request.yml
architectures/: SegFormer3D.json
configs/: SegFormer3D.json
src/explainibility/: basic_gradient_based_methods.py  calculate_explanation_statistics_segformer.py  explain_model.ipynb  explain_transformer_output.py  gather_explanations.sh  grad_cam_methods.py  sae_explainibility.py  visualization.py
src/model_architecture/SAE/: SAE.py  ScansEncoder.py
src/model_architecture/cnn_clasifier/: cnn_clasifier.py
src/model_architecture/resnet3d/: resnet.py
src/model_training/: SaeTraining.py  ScansEncoderTraining.py  cnn_clasifier_training.py  resnet3d_training.py
src/model_training/training_helpers/: knee_datasets.py  loggers.py  main.ipynb
src/model_training/training_helpers/.ipynb_checkpoints/: main-checkpoint.ipynb
src/web_app/: config.py  main.py
tests/: test_app.py  test_architecture.py  test_xai.py
