[project]
name = "knee-scaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "captum>=0.7.0",
    "numpy==2.3.4",
    "pandas==2.2.3",
    "torch>=2.9.0",
]

[dependency-groups]
dev = [
    "wandb==0.21.4",
]
lint = [
    "ruff>=0.14.4",
]
