[project]
name = "knee-scaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "captum>=0.7.0",
    "monai>=1.5.1",
    "numpy==2.3.4",
    "pandas==2.2.3",
    "pyaiwrap",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "streamlit", 
    "plotly",
    "scikit-image",
]

[dependency-groups]
dev = [
    "pytest==7.4.4",
    "wandb==0.21.4",
]
lint = [
    "ruff>=0.14.4",
]

[tool.uv.workspace]
members = [
    "git_submodules/PyAiWrap",
]

[tool.uv.sources]
pyaiwrap = { workspace = true }
